Fix the overflow scroll

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   width:45%;
   margin:0 40px 40px;
   max-height: 600px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .overall {
